<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Contacts</string>
    <string name="app_setting">Settings</string>
    <string name="app_info">About</string>
    <string name="contact_deleted">Deleted contacts</string>
    <string name="name_field">Name</string>
    <string name="surname_field">Surname</string>
    <string name="telephone_field">Telephone</string>
    <string name="email_field">E-mail</string>
    <string name="notes_field">Notes</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="call_button">Call</string>
    <string name="email_button">E-Mail</string>
    <string name="edit_button">Edit</string>
    <string name="delete_button">Delete</string>
    <string name="required_field">Some required fields may be empty</string>
    <string name="permission_denied">Permission denied</string>
    <string name="delete_alert_title">Delete contact</string>
    <string name="delete_alert_message">Are you sure you want to delete this contact ?</string>
    <string name="restore_alert_title">Restore contact</string>
    <string name="restore_alert_message">Are you sure you want to restore this contact ?</string>
    <string name="general_settings">General</string>
    <string name="orderby_settings">Order contacts by</string>
    <string name="orderby_default">Default</string>
    <string name="delete_settings">Keep deleted contacts</string>
    <string name="app_scope">The Contacts App, created to save all your contacts.</string>
    <string name="developer">Developer: Samuele Urbano</string>
    <string name="version">"Version: "</string>
    <string name="email_send">This contact does not have an email</string>
    <string name="invalid_field">The e-mail field is invalid</string>
    <string name="contacts_counter">Contacts:</string>
    <string name="contact_already_exists">This contact already exists in Contacts</string>
    <string name="qr_code_button">Import from QR Code</string>
    <string name="generate_qr_code_button">Generate contact QR Code</string>
    <string name="invalid_qr_code">This QR Code does not contain a contact</string>
</resources>