<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ContactsSettingsActivity">

    <include android:id="@+id/toolbar" layout="@layout/toolbar"></include>

    <TextView
        android:id="@+id/general_settings_section"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/general_settings"
        android:textSize="28sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">
    </TextView>

    <LinearLayout
        android:id="@+id/order"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/general_settings_section">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/orderby_settings"
            android:textSize="20sp"
            android:gravity="start|center">
        </TextView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <RadioGroup
                android:id="@+id/order_option_combo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="3"
                android:orientation="horizontal">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/order_by_default"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/orderby_default"
                    android:checked="true">
                </com.google.android.material.radiobutton.MaterialRadioButton>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/order_by_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/name_field">
                </com.google.android.material.radiobutton.MaterialRadioButton>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/order_by_surname"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/surname_field">
                </com.google.android.material.radiobutton.MaterialRadioButton>
            </RadioGroup>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <TextView
        android:id="@+id/contact_settings_section"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textSize="28sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order">
    </TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/deleted"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_settings_section">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:layout_marginStart="2dp"
                android:text="@string/delete_settings"
                android:textSize="20sp"
                android:gravity="start|center">
            </TextView>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/keep_deleted"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:checked="true">
            </com.google.android.material.switchmaterial.SwitchMaterial>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>